NetBSD Problem Report #47244

From htodd@mara.i8u.org  Sun Nov 25 20:10:45 2012
Return-Path: <htodd@mara.i8u.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 1445963DFC7
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 25 Nov 2012 20:10:45 +0000 (UTC)
Message-Id: <20121125201012.E36DE10329D8@mara.i8u.org>
Date: Sun, 25 Nov 2012 12:10:12 -0800 (PST)
From: htodd@twofifty.com
Reply-To: htodd@twofifty.com
To: gnats-bugs@gnats.NetBSD.org
Subject: Fit PC2i (Atom processor) won't boot i386-current
X-Send-Pr-Version: 3.95

>Number:         47244
>Category:       port-i386
>Synopsis:       Fit PC2i (Atom processor) won't boot i386-current
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 25 20:15:00 +0000 2012
>Closed-Date:    Sat Dec 01 22:37:45 +0000 2012
>Last-Modified:  Sat Dec 01 22:37:45 +0000 2012
>Originator:     H. Todd Fujinaka
>Release:        NetBSD 6.99.15
>Organization:
None
>Environment:


System: NetBSD testme.i8u.org 6.99.15 NetBSD 6.99.15 (INSTALL): Sat Nov 24 17:48:42 PST 2012 htodd@mara.i8u.org:/usr/obj/sys/arch/i386/compile.i386/INSTALL i386
Architecture: x86_32
Machine: i386
>Description:
Trying to install on the Fit PC2i from a USB stick. Using USB keyboard leads to lockups in pckbc. Disabling pckbc leads to a kernel panic. So I went to a serial console.

NetBSD 6.99.15 (TESTME) #24: Sat Nov 24 23:14:29 PST 2012
        htodd@mara.i8u.org:/usr/obj/sys/arch/i386/compile.i386/TESTME
total memory = 1014 MB
avail memory = 979 MB
cprng kernel: WARNING insufficient entropy at creation.
mainbus0 (root)
cpu0 at mainbus0 apid 0: Intel(R) Atom(TM) CPU Z530   @ 1.60GHz, id 0x106c2
cpu1 at mainbus0 apid 1: Intel(R) Atom(TM) CPU Z530   @ 1.60GHz, id 0x106c2
ioapic0 at mainbus0 apid 2
acpi0 at mainbus0: Intel ACPICA 20110623
ioapic0 reenabling
ACPI Error: Could not enable PowerButton event (20110623/evxfevnt-216)
ACPI Warning: Could not enable fixed event 0x2 (20110623/evxface-223)
acpi0: failed to register fixed event 2: AE_NO_HARDWARE_RESPONSE
hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
acpiec0 at acpi0 (H_EC, PNP0C09-1): io 0x62,0x66
acpiacad0 at acpi0 (ADP1, ACPI0003): ACPI AC Adapter
acpibat0 at acpi0 (BAT0, PNP0C0A-0): ACPI Battery
acpibat1 at acpi0 (BAT1, PNP0C0A-1): ACPI Battery
acpibat2 at acpi0 (BAT2, PNP0C0A-2): ACPI Battery
acpibut0 at acpi0 (PWRB, PNP0C0C): ACPI Power Button
PDRC (PNP0C02) at acpi0 not configured
acpivga0 at acpi0 (GFX0): ACPI Display Adapter
acpiout0 at acpivga0 (DD01, 0x0120): ACPI Display Output Device
acpiout1 at acpivga0 (DD02, 0x0220): ACPI Display Output Device
acpiout2 at acpivga0 (DD03, 0x0320): ACPI Display Output Device
acpiout3 at acpivga0 (DD04, 0x0410): ACPI Display Output Device
acpiout4 at acpivga0 (DD05, 0x0005): ACPI Display Output Device
acpivga0: unknown output device acpiout4
FWHD (INT0800) at acpi0 not configured
npx1 at acpi0 (MATH, PNP0C04): io 0xf0 irq 13
LDRC (PNP0C02) at acpi0 not configured
attimer1 at acpi0 (TIMR, PNP0100): io 0x40-0x43
SIOR (PNP0C02) at acpi0 not configured
SP1 (PNP0501) at acpi0 not configured
acpitz0 at acpi0 (TZ00)
acpitz1 at acpi0 (TZ01): cpu0 cpu1
apm0 at acpi0: Power Management spec V1.2
pci0 at mainbus0 bus 0: configuration mode 1
pchb0 at pci0 dev 0 function 0: vendor 0x8086 product 0x8100 (rev. 0x07)
vga1 at pci0 dev 2 function 0: vendor 0x8086 product 0x8108 (rev. 0x07)
wsdisplay0 at vga1 kbdmux 1
drm at vga1 not configured
hdaudio0 at pci0 dev 27 function 0: HD Audio Controller
hdaudio0: interrupting at ioapic0 pin 22
hdafg0 at hdaudio0: Realtek ALC662
hdafg0: DAC00 6ch: Speaker [Jack], HP Out [Jack]
hdafg0: ADC01 2ch: Line In [Jack], Mic In [Jack]
hdafg0: DIG02 2ch: SPDIF Out [Jack]
hdafg0: ADC03 2ch: Mic In [Jack]
hdafg0: 6ch/2ch 44100Hz 48000Hz 96000Hz PCM16 PCM20 PCM24 AC3
audio0 at hdafg0: full duplex, playback, capture, independent
ppb0 at pci0 dev 28 function 0: vendor 0x8086 product 0x8110 (rev. 0x07)
ppb0: PCI Express 1.0 <Root Port of PCI-E Root Complex> x1 @ 2.5Gb/s
pci1 at ppb0 bus 2
re0 at pci1 dev 0 function 0: RealTek 8168/8111 PCIe Gigabit Ethernet (rev. 0x02)
re0: interrupting at ioapic0 pin 16
re0: Ethernet address 00:01:c0:09:c0:61
rgephy0 at re0 phy 7: RTL8169S/8110S/8211 1000BASE-T media interface, rev. 2
rgephy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
ppb1 at pci0 dev 28 function 1: vendor 0x8086 product 0x8112 (rev. 0x07)
ppb1: PCI Express 1.0 <Root Port of PCI-E Root Complex> x1 @ 2.5Gb/s
pci2 at ppb1 bus 3
re1 at pci2 dev 0 function 0: RealTek 8168/8111 PCIe Gigabit Ethernet (rev. 0x02)
re1: interrupting at ioapic0 pin 17
re1: Ethernet address 00:01:c0:09:c0:62
rgephy1 at re1 phy 7: RTL8169S/8110S/8211 1000BASE-T media interface, rev. 2
rgephy1: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
uhci0 at pci0 dev 29 function 0: vendor 0x8086 product 0x8114 (rev. 0x07)
uhci0: interrupting at ioapic0 pin 23
usb0 at uhci0: USB revision 1.0
uhci1 at pci0 dev 29 function 1: vendor 0x8086 product 0x8115 (rev. 0x07)
uhci1: interrupting at ioapic0 pin 19
usb1 at uhci1: USB revision 1.0
uhci2 at pci0 dev 29 function 2: vendor 0x8086 product 0x8116 (rev. 0x07)
uhci2: interrupting at ioapic0 pin 18
usb2 at uhci2: USB revision 1.0
ehci0 at pci0 dev 29 function 7: vendor 0x8086 product 0x8117 (rev. 0x07)
ehci0: interrupting at ioapic0 pin 21
ehci0: companion controllers, 2 ports each: uhci0 uhci1 uhci2
usb3 at ehci0: USB revision 2.0
sdhc0 at pci0 dev 30 function 0: vendor 0x8086 product 0x811c (rev. 0x07)
sdhc0: interrupting at ioapic0 pin 22
sdhc0: SD Host Specification 1.0, rev.255
sdhc0: using DMA transfer
sdmmc0 at sdhc0 slot 0
sdhc1 at pci0 dev 30 function 1: vendor 0x8086 product 0x811d (rev. 0x07)
sdhc1: interrupting at ioapic0 pin 20
sdhc1: SD Host Specification 1.0, rev.255
sdhc1: using DMA transfer
sdmmc1 at sdhc1 slot 0
sdhc2 at pci0 dev 30 function 2: vendor 0x8086 product 0x811e (rev. 0x07)
sdhc2: interrupting at ioapic0 pin 18
sdhc2: SD Host Specification 1.0, rev.255
sdhc2: using DMA transfer
sdmmc2 at sdhc2 slot 0
pcib0 at pci0 dev 31 function 0: vendor 0x8086 product 0x8119 (rev. 0x07)
schide0 at pci0 dev 31 function 1: Intel SCH IDE Controller (rev. 0x07)
schide0: primary channel interrupting at ioapic0 pin 14
atabus0 at schide0 channel 0
isa0 at pcib0
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
com0: console
pcppi0 at isa0 port 0x61
midi0 at pcppi0: PC speaker
sysbeep0 at pcppi0
attimer1: attached to pcppi0
acpicpu0 at cpu0: ACPI CPU
coretemp0 at cpu0: thermal sensor, 1 C resolution
acpicpu1 at cpu1: ACPI CPU
acpiacad0: AC adapter online.
uhub0 at usb0: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub1 at usb1: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub2 at usb2: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub3 at usb3: vendor 0x8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
umass0 at uhub3 port 1 configuration 1 interface 0
umass0: SMART USB, rev 2.00/30.00, addr 2
scsibus0 at umass0: 2 targets, 1 lun per target
sd0 at scsibus0 target 0 lun 0: <SMART, USB, 3000> disk removable
sd0: 3920 MB, 7962 cyl, 16 head, 63 sec, 512 bytes/sect x 8028160 sectors
ehci0: handing over full speed device on port 2 to uhci0
wd0 at atabus0 drive 0
wd0: <Hitachi HTS542525K9SA00>
wd0: 232 GB, 484521 cyl, 16 head, 63 sec, 512 bytes/sect x 488397168 sectors
dk0 at wd0: be1424c6-3715-11e2-a22d-0001c009c061
dk0: 128 blocks at 34, type:
dk1 at wd0: be149883-3715-11e2-a22d-0001c009c061
dk1: 478150528 blocks at 162, type: ffs
dk2 at wd0: be15f2d4-3715-11e2-a22d-0001c009c061
dk2: 8388608 blocks at 478150690, type: swap
run0 at uhub3 port 7
run0: Ralink 802.11 n WLAN, rev 2.00/1.01, addr 3
run0: MAC/BBP RT3070 (rev 0x0201), RF RT3020 (MIMO 1T1R), address 00:0d:f0:95:10:94
Mutex error: lockdebug_barrier: spin lock held

lock address : 0x00000000c25098f0 type     :               spin
initialized  : 0x00000000c0397845
shared holds :                  0 exclusive:                  1
shares wanted:                  0 exclusive:                  0
current cpu  :                  0 last held:                  0
current lwp  : 0x00000000c29342a0 last held: 0x00000000c29342a0
last locked* : 0x00000000c03975ea unlocked : 000000000000000000
owner field  : 0x0000000000010600 wait/spin:                0/1

panic: LOCKDEBUG
fatal breakpoint trap in supervisor mode
trap type 1 code 0 eip c0269dd4 cs 8 eflags 246 cr2 0 ilevel 8 esp daa688c0
curlwp 0xc29342a0 pid 0 lid 50 lowest kstack 0xdaa66000
Stopped in pid 0.50 (system) at netbsd:breakpoint+0x4:  popl    %ebp
db{0}> x/i 0x00000000c03975ea
netbsd:ieee80211_node_table_reset+0x43: movl    $0,9c(%esi)
db{0}> bt
breakpoint(c0bf4bd1,c11d5ac0,c0bdc0c9,daa688dc,c0b34380,c25969cc,6,c0b34380,daa688d0,c079ddef) at netbsd:breakpoint+0x4
vpanic(c0bdc0c9,daa688dc,daa688fc,c079591e,c0bdc0c9,c0ba6910,c0b34380,c0bdc16a,1c1b4d4,c0bdc16a) at netbsd:vpanic+0x1e2
printf_nolog(c0bdc0c9,c0ba6910,c0b34380,c0bdc16a,1c1b4d4,c0bdc16a,0,c29342a0,c11dc788,daa68958) at netbsd:printf_nolog
lockdebug_more(c0bdc16a,1,0,0,c07997ab,0,c24ad6d0,daa68944,c0934df1,0) at netbsd:lockdebug_more
mutex_enter(c11dc788,c11dc788,c2509000,c043bc8e,0,daa689a8,c043ccb3,c29bbe0c,c2509e10,1) at netbsd:mutex_enter+0x4a2
usb_add_task(c29bbe0c,c2509e10,1,c056a876,6,0,0,6,c2509254,c25098ec) at netbsd:usb_add_task+0x28
run_do_async(0,c2509254,daa689e0,c0393b05,c2509254,c25098f2,1,c07956ed,c27e1154,c25098f0) at netbsd:run_do_async+0xde
ieee80211_reset_erp(c2509254,c25098f2,1,c07956ed,c27e1154,c25098f0,c25098ec,c03841be,daa68a00,c03975fb) at netbsd:ieee80211_reset_erp+0x5f
ieee80211_free_allnodes_locked(c25098f0,c2509980,6,c03841be,c2509254,c25098ec,daa68a1c,c0397623,c25098ec,0) at netbsd:ieee80211_free_allnodes_locked+0x84
ieee80211_node_table_reset(c25098ec,0,c2509254,4,c03841be,daa68a40,c03978bd,c2509254,2,6) at netbsd:ieee80211_node_table_reset+0x54
ieee80211_reset_bss(c2509254,2,6,daa68a7c,c25093e0,c2509254,c043fa48,daa68ad4,c038448a,c2509254) at netbsd:ieee80211_reset_bss+0x1a
ieee80211_node_lateattach(c2509254,daa68a80,270,2,c0b82de1,c0b82f58,0,0,c2509004,c2509ad4) at netbsd:ieee80211_node_lateattach+0x1eb
ieee80211_media_init(c2509254,c043fa48,c03841be,201,c0b9108f,1,1,c11923da,13,97a400) at netbsd:ieee80211_media_init+0x2a
run_attach(c29443c8,c29bc748,daa68b74,daa68b98,daa68b74,c29bc748,c29bbe0c,148f,0,daa68bbc) at netbsd:run_attach+0xad2
config_attach_loc(c29443c8,c0c0c698,daa68b98,daa68b74,c0877c51,c0788b3e,7,148f,3070,101) at netbsd:config_attach_loc+0x176
usbd_attachwholedevice(0,0,3,6,0,c29443c8,c29bbe0c,3,c2938828,daa68c84) at netbsd:usbd_attachwholedevice+0xa4
usbd_probe_and_attach(3,c29bbe0c,c29bbe30,ffffffff,c29bbe10,1388,0,c29443c8,c2938828,3) at netbsd:usbd_probe_and_attach+0x1c
usbd_new_device(c29443c8,c2938828,1,3,7,c27e0cb4,1,c258ad80,501,0) at netbsd:usbd_new_device+0x464
uhub_explore(c27f558c,0,c29342a0,0,c27fe468,c27fe468,c27fe484,daa68d2c,c08764e2,c293880c) at netbsd:uhub_explore+0x32a
usb_discover.clone.0(c293880c,1f4,daa68d2c,c0789a0e,c27fe468,c087649e,c29342a0,0,c0100321,c27fe468) at netbsd:usb_discover.clone.0+0x56
usb_event_thread(c27fe468,12fa000,1304000,0,c0100307,0,0,0,0,0) at netbsd:usb_event_thread+0x44

>How-To-Repeat:
Try installing NetBSD. (FreeBSD works.)

>Fix:
Yes, please.


>Release-Note:

>Audit-Trail:
From: Hisashi T Fujinaka <htodd@twofifty.com>
To: gnats-bugs@NetBSD.org
Cc: port-i386-maintainer@NetBSD.org, gnats-admin@NetBSD.org,
        netbsd-bugs@NetBSD.org
Subject: Re: port-i386/47244: Fit PC2i (Atom processor) won't boot
 i386-current
Date: Sun, 25 Nov 2012 12:41:32 -0800 (PST)

 Looks like disabling run (wifi) will get things booting from a serial console.

From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, port-i386-maintainer@netbsd.org, 
	gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: port-i386/47244: Fit PC2i (Atom processor) won't boot i386-current
Date: Sun, 25 Nov 2012 17:14:28 -0500

 On Nov 25,  8:15pm, htodd@twofifty.com (htodd@twofifty.com) wrote:
 -- Subject: port-i386/47244: Fit PC2i (Atom processor) won't boot i386-curren

 Try:

 Index: if_run.c
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/usb/if_run.c,v
 retrieving revision 1.4
 diff -u -p -u -r1.4 if_run.c
 --- if_run.c    20 Aug 2012 07:32:49 -0000      1.4
 +++ if_run.c    25 Nov 2012 22:13:37 -0000
 @@ -495,6 +495,7 @@ run_attach(device_t parent, device_t sel

         sc->sc_dev = self;
         sc->sc_udev = uaa->device;
 +       sc->sc_flags |= RUN_DETACHING;  /* Prevent addition of usb tasks */

         devinfop = usbd_devinfo_alloc(sc->sc_udev, 0);
         aprint_normal_dev(sc->sc_dev, "%s\n", devinfop);
 @@ -665,6 +666,7 @@ run_attach(device_t parent, device_t sel
         ieee80211_announce(ic);

         usbd_add_drv_event(USB_EVENT_DRIVER_ATTACH, sc->sc_udev, sc->sc_dev);
 +       sc->sc_flags &= ~RUN_DETACHING; /* Allow addition of usb tasks */
  }


 if_otus needs the same treatment too. This makes some commands lost,
 (setshortslot), but presumably it will catch up later.

 christos

From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47244 CVS commit: src/sys/dev/usb
Date: Tue, 27 Nov 2012 04:54:58 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Tue Nov 27 04:54:58 UTC 2012

 Modified Files:
 	src/sys/dev/usb: usb.c

 Log Message:
 since usb task add/remove is supposed to be callable in any usb
 context, make sure the lock is OK for such.  ie, not a sleeping lock.
 fixes PR#47244.


 To generate a diff of this commit:
 cvs rdiff -u -r1.135 -r1.136 src/sys/dev/usb/usb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sat, 01 Dec 2012 22:37:45 +0000
State-Changed-Why:
submitter says my patch fixed the problem for him.  thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.