since usb task add/remove is supposed to be callable in any usb context, make sure the lock is OK for such.  ie, not a sleeping lock. fixes PR#47244.